# sfn-templates

./: CONTRIBUTION.md  README.md
go-template/: README.md  handle.go  stackit-functions.yaml
js-template/: README.md  handler.js  package.json  stackit-functions.yaml
py-template/: README.md  handler.py  pyproject.toml  stackit-functions.yaml
quarkus-template/: README.md  stackit-functions.yaml
quarkus-template/src/main/java/functions/: Function.java
quarkus-template/src/main/resources/: application.properties
rs-template/: Cargo.toml  README.md  stackit-functions.yaml
rs-template/src/: handler.rs
spring-template/: README.md  stackit-functions.yaml
spring-template/src/main/java/functions/: CloudFunctionApplication.java
ts-template/: README.md  package.json  stackit-functions.yaml  tsconfig.json
ts-template/src/: handler.ts
